finish 375px version

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="icon" href="./images/pizza-logo.png" />
     <link
       href="https://fonts.googleapis.com/css2?family=Sen:wght@400;800&family=Tilt+Neon&display=swap"
       rel="stylesheet"
@@ -15,122 +16,173 @@
   </head>
   <body>
     <header>
-      <div class="header-text">
-        <h1>Pizzeria Tona Sera</h1>
-        <h2>Najlepsza pizza ever</h2>
-        <p>
-          Cienkie czy grube ciasto? Salami, szynka czy może brokuły i fenkuł? To
-          zależy od Ciebie, ale wiedz jedno... nie żałujemy ssseeeraaaa!
-        </p>
-        <a href="#telefon">Zamów mnie</a>
+      <div class="header-text" id="nav-top">
+        <div class="header-text">
+          <h2>Pizzeria</h2>
+          <h1>Tona Sera</h1>
+          <h2>Najlepsza pizza ever</h2>
+          <p>
+            Cienkie czy grube ciasto? Salami, szynka czy może brokuły i fenkuł?
+            To zależy od Ciebie, ale wiedz jedno... nie żałujemy ssseeeraaaa!
+          </p>
+          <a class="button-zamowienie" href="#nav-zamowienie">Zamów mnie</a>
+        </div>
       </div>
-      <img src="??????????" alt="pizza" />
     </header>
     <nav>
-      <a href="#top">Na górę</a><a href="#onas">O nas</a><a href="#menu">Menu</a
-      ><a href="#promocje">Promocje</a><a href="#zamowienie">Zamów</a
-      ><a href="#adres">Adres</a>
+      <a href="#nav-top">Na górę</a><a href="#nav-onas">O nas</a
+      ><a href="#nav-menu">Menu</a><a href="#nav-promocje">Promocje</a
+      ><a href="#nav-zamowienie">Zamów</a><a href="#nav-adres">Adres</a>
     </nav>
     <main>
-      <div><img src="???????" alt="pizzeria" /></div>
       <div class="onas">
-        <div>
-          <h2>Kim jesteśmy?</h2>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore
-            blanditiis nulla suscipit, a ab quaerat, quae eligendi sint
-            voluptatum vel obcaecati necessitatibus modi tempora impedit sunt
-            odio explicabo, facere assumenda quas quos omnis. Provident quod
-            harum, dignissimos quibusdam distinctio cumque dicta laborum nisi
-            non temporibus quasi reiciendis quia modi laudantium.
-          </p>
+        <div><img src="./images/onas.jpg" alt="pizzeria" /></div>
+        <div class="onas-text" id="nav-onas">
+          <div>
+            <h2>Kim jesteśmy?</h2>
+            <p>
+              Przede wszystkim - UWIELBIAMY pizzę! I ser. I pizzę. Ale ser chyba
+              bardziej. Nie dla nas teorie, że na pizzy musi być niewiele
+              dodatków. U nas może być ich mnóstwo, ale ser... SER przede
+              wszystkim!
+            </p>
+          </div>
         </div>
       </div>
       <div class="rozdzielacz"></div>
-      <div class="menu">
+      <div class="menu" id="nav-menu">
+        <h2>Co możemy dla Was zrobić?</h2>
         <div>
-          <h2>Pizze</h2>
+          <h3>Pizze</h3>
           <ul>
-            <li>Lorem 152zł</li>
-            <li>Lorem 152zł</li>
-            <li>Lorem 152zł</li>
-            <li>Lorem 152zł</li>
-            <li>Lorem 152zł</li>
-            <li>Lorem 152zł</li>
-            <li>Lorem 152zł</li>
-            <li>Lorem 152zł</li>
-            <li>Lorem 152zł</li>
-            <li>Lorem 152zł</li>
-            <li>Lorem 152zł</li>
+            <li>
+              <p>Tona sera</p>
+              <p>25zł</p>
+            </li>
+            <li>
+              <p>Pół tony sera</p>
+              <p>18zł</p>
+            </li>
+            <li>
+              <p>Serowy zawrót głowy</p>
+              <p>28zł</p>
+            </li>
+            <li>
+              <p>Jak dziura w serze</p>
+              <p>36zł</p>
+            </li>
+            <li>
+              <p>Mmmmm ssseerrrr</p>
+              <p>40zł</p>
+            </li>
+            <li>
+              <p>Cztery pory sera</p>
+              <p>36zł</p>
+            </li>
+            <li>
+              <p>Tona sera</p>
+              <p>58zł</p>
+            </li>
+            <li>
+              <p>Szukaj myszy w serze</p>
+              <p>29zł</p>
+            </li>
+            <li>
+              <p>Ser ser serem pogania</p>
+              <p>32zł</p>
+            </li>
+            <li>
+              <p>Na koniec sera i jeszcze dalej</p>
+              <p>43zł</p>
+            </li>
           </ul>
         </div>
         <div>
-          <h2>Przekąski</h2>
+          <h3>Przekąski</h3>
           <ul>
-            <li>Lorem 152zł</li>
-            <li>Lorem 152zł</li>
-            <li>Lorem 152zł</li>
-            <li>Lorem 152zł</li>
-            <li>Lorem 152zł</li>
-            <li>Lorem 152zł</li>
-            <li>Lorem 152zł</li>
+            <li>
+              <p>Mały ser na mały głód</p>
+              <p>15zł</p>
+            </li>
+            <li>
+              <p>Serowe zawijaski</p>
+              <p>11zł</p>
+            </li>
+            <li>
+              <p>Chrupiące serrrki</p>
+              <p>12zł</p>
+            </li>
+            <li>
+              <p>Jak piwko to serek na przeciwko</p>
+              <p>8zł</p>
+            </li>
+            <li>
+              <p>Paluszki serowe</p>
+              <p>16zł</p>
+            </li>
+            <li>
+              <p>Daj mi sera</p>
+              <p>10zł</p>
+            </li>
           </ul>
         </div>
         <div>
-          <h2>Napoje</h2>
+          <h3>Napoje</h3>
           <ul>
-            <li>Lorem 152zł</li>
-            <li>Lorem 152zł</li>
-            <li>Lorem 152zł</li>
-            <li>Lorem 152zł</li>
-            <li>Lorem 152zł</li>
+            <li>
+              <p>Orenżada deSEROWA</p>
+              <p>5zł</p>
+            </li>
+            <li>
+              <p>Lemoniada żółta jak ser</p>
+              <p>8zł</p>
+            </li>
+            <li>
+              <p>Herbatka z SERcem</p>
+              <p>5zł</p>
+            </li>
           </ul>
         </div>
       </div>
-      <div><a href="#telefon">Zamów mnie</a></div>
-      <div class="promocje">
+      <div>
+        <a class="button2-zamowienie" href="#nav-zamowienie">Zamów mnie</a>
+      </div>
+      <div class="promocje" id="nav-promocje">
         <h2>Promocje</h2>
-        <div>
+        <div class="stolat">
           <h3>Sto lat!</h3>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-            Distinctio, amet?
-          </p>
-          <h3>Lorem, ipsum.</h3>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-            Distinctio, amet?
-          </p>
+          <p>Masz urodziny? Pokaż dowód i powiedz:</p>
+          <h3>To dziś!</h3>
+          <p>W prezencie dostaniesz przekąskę gratis.</p>
         </div>
-        <div>
+        <div class="zoltyser">
           <h3>Żółty ser</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum,
-            totam?
+            Załóż na siebie jakiekolwiek żółte ubranie, pokaż nam i krzyknij:
           </p>
-          <h3>Lorem, ipsum dolor.</h3>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-            Distinctio, amet?
-          </p>
+          <h3>Ser rządzi!</h3>
+          <p>Dostaniesz 10% rabatu na całe zamówienie.</p>
         </div>
       </div>
-      <div class="zamowienie">
-        <h2>Dzwoń! 452 4856 453</h2>
-        <p>Dowóz na terenie Dziurdowa - GRATIS!</p>
+      <div class="zamowienie" id="nav-zamowienie">
+        <h3>Dzwoń!</h3>
+        <h2>452 4856 453</h2>
+        <p>Dowóz na terenie Dziuradowa - GRATIS!</p>
       </div>
-      <div class="adres">
-        <div><img src="?????????" alt="" /></div>
-        <div class="text-onas">
+      <div class="adres" id="nav-adres">
+        <div class="text-adres">
           <h2>Zapraszamy!</h2>
           <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis
-            magnam necessitatibus exercitationem voluptate, officia autem,
-            beatae unde, rerum ut dolores molestiae similique dolore iusto
-            veniam deleniti minima fuga quidem vitae! Sunt vel aspernatur qui
-            sit cupiditate corporis mollitia laudantium eos quisquam maxime
-            dolor, culpa, dignissimos neque. Incidunt voluptas eligendi autem!
+            Gdzie znajduje się Pizzeria Tona Sera? Proste! Wjedź do Dziuradowa,
+            na głównym skrzyżowaniu pojedź w lewo, potem prosto, koło kościoła w
+            prawo, przy pomniku czarnej dziury objedźcie rondo i zjedźcie w
+            piąty zjazd, potem już prosto!
           </p>
+          <p>...a tak serio...</p>
+          <p>ulica Dalmatyńskiej Kropki 54, Dziuradowo</p>
+        </div>
+        <div class="img-adres">
+          <img src="./images/end.jpg" alt="pizza" />
         </div>
       </div>
     </main>
@@ -138,7 +190,10 @@
       <div>
         <p>2023 Pizzeria Tona Sera</p>
       </div>
-      <div><a href="#telefon">Zamów mnie</a><a href="#menu">Menu</a></div>
+      <div class="button-footer">
+        <a href="#nav-menu">Menu</a>
+        <a class="button-zamowienie" href="#nav-zamowienie">Zamów</a>
+      </div>
     </footer>
   </body>
 </html>
