--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     <header>
       <div class="header-text" id="nav-top">
         <div class="header-text">
-          <h2>Pizzeria</h2>
+          <h2 class="pizzeria">Pizzeria</h2>
           <h1>Tona Sera</h1>
-          <h2>Najlepsza pizza ever</h2>
+          <h2 class="thebest">Najlepsza pizza ever</h2>
           <p>
             Cienkie czy grube ciasto? Salami, szynka czy może brokuły i fenkuł?
             To zależy od Ciebie, ale wiedz jedno... nie żałujemy ssseeeraaaa!
