finish desktop version

--- a/index.html
+++ b/index.html
@@ -25,14 +25,17 @@
             Cienkie czy grube ciasto? Salami, szynka czy może brokuły i fenkuł?
             To zależy od Ciebie, ale wiedz jedno... nie żałujemy ssseeeraaaa!
           </p>
-          <a class="button-zamowienie" href="#nav-zamowienie">Zamów mnie</a>
+          <div class="button-pizza">
+            <a class="button-zamowienie" href="#nav-zamowienie">Zamów </a>
+            <img src="./images/button-pizza.png" alt="pizza" />
+          </div>
         </div>
       </div>
     </header>
     <nav>
-      <a href="#nav-top">Na górę</a><a href="#nav-onas">O nas</a
-      ><a href="#nav-menu">Menu</a><a href="#nav-promocje">Promocje</a
-      ><a href="#nav-zamowienie">Zamów</a><a href="#nav-adres">Adres</a>
+      <a href="#nav-onas">O nas</a><a href="#nav-menu">Menu</a
+      ><a href="#nav-promocje">Promocje</a><a href="#nav-zamowienie">Zamów</a
+      ><a href="#nav-adres">Adres</a>
     </nav>
     <main>
       <div class="onas">
@@ -144,8 +147,9 @@
           </ul>
         </div>
       </div>
-      <div>
+      <div class="button2">
         <a class="button2-zamowienie" href="#nav-zamowienie">Zamów mnie</a>
+        <img src="./images/button-pizza.png" alt="pizza" />
       </div>
       <div class="promocje" id="nav-promocje">
         <h2>Promocje</h2>
